attempt to prevent text overflowing

--- a/css/style.scss
+++ b/css/style.scss
@@ -258,12 +258,14 @@ body{
     margin-right: 2em;
     margin-bottom: .3em;
     opacity: 0.6;
+    word-wrap: break-word;
 }
 
 .result-link{
     font-size: 1.8em;
     color: rgb(71, 57, 192);
     transition: 0.3s;
+    word-wrap: break-word;
 }
 .result-link:hover{
     color: rgb(107, 94, 221);
